--- a/src/Components/TextFormStyle.css
+++ b/src/Components/TextFormStyle.css
@@ -29,12 +29,12 @@
   }
   .optionsdiv{
     left:0px;
-    background-color: aqua;
+    background-color: rgba(0, 255, 255, 0);
   }
   .textButton{
-      background-color: aqua;
+      background-color: rgba(0, 255, 255, 0);
       margin-left: 0%;
       height:31.7cm ;
       width: 100%;
-      left:0%;
+      left:0%;  
   }
