Add more sizes, add margin.
FossilOrigin-Name: 9056e6e08cc23084154eab61e406f3ef3098e79aa5a3488d5806862d15382204

--- a/src/Components/TextFormStyle.css
+++ b/src/Components/TextFormStyle.css
@@ -11,6 +11,7 @@
     border-radius: 1cm;
     border-color: blue;
     border-style: double;
+	margin: 0.4cm;
     left:0%;
     max-width: 20cm;
     max-height:28.5cm ;
