change of default text sixe, padding, border style.
FossilOrigin-Name: 18658ac965470dec78e95ccfc78613164d82503fb0e0023d3e2588ddbb6a52f3

--- a/src/Components/TextFormStyle.css
+++ b/src/Components/TextFormStyle.css
@@ -7,14 +7,14 @@
     align-items: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
-    border-width: .5cm;
+    border-width: .3cm;
     border-radius: 1cm;
     border-color: blue;
-    border-style: double;
+    border-style: solid;
 	margin: 0.4cm;
     left:0%;
     max-width: 20cm;
-    max-height:28.5cm ;
+    max-height:28.7cm ;
     
   }
   
