change of background color.
FossilOrigin-Name: ec265be6a7b358943afc2069eaa3ca4e4096268b8087d0b21d09599339cb9707

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: aquamarine;
+  background-color: rgb(172, 219, 244);
 }
 
 code {
