--- a/src/Components/TextFormStyle.css
+++ b/src/Components/TextFormStyle.css
@@ -20,20 +20,23 @@
   
   .printdiv{
   
-    height:29.7cm ;
-    width:21cm;
-   
-    right:.5cm;
+  height:29.7cm ;
+  width:21cm;
+  right:4%;
+    
     background: white;
     overflow: hidden;
     padding-top: .5cm;
     padding-left: .5cm;
     padding-bottom: .5cm;
     padding-right: .5cm;
+    position:absolute;
+    margin-top: 2%;
 
   }
   .optionsdiv{
-    left:0px;
+    left:2%;
+    position: fixed;
     
   }
   .textButton{
@@ -46,6 +49,7 @@
       flex-wrap: wrap;
       flex-direction: row;
       justify-content: space-around; 
+      margin-top: 2%;
   }
   ::placeholder{
     color: rgba(128, 128, 128, 0.385);
