--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 body {
-  margin: 0;
+  margin-top: 0;
+  height: 100%;
+  width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(172, 219, 244);
+  background-image: url("./image/background.jpg");
 }
 
 code {
