--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("./image/background.jpg");
+  background-image: url("./image/background.svg");
 }
 
 code {
